# training-hub

./: README.md
devops/aws/architect-diagrams/: README.md  pyproject.toml
devops/aws/architect-diagrams/bank_portals/: constants.py  utils.py
generative-ai/1-courses/1-1-chat-prompt-eng/: README.md  pyproject.toml
generative-ai/1-courses/1-1-chat-prompt-eng/documents/: learning-notes.md
generative-ai/1-courses/1-2-langchain_for_llm_application_development/: .env.example  pyproject.toml
generative-ai/1-courses/1-2-langchain_for_llm_application_development/src/: open_ai_api.py
generative-ai/1-courses/1-3-langchain-explained-in-13-minutes/: pyproject.toml
generative-ai/1-courses/1-4-langchain-functions-tools-agents/: README.md  pyproject.toml
generative-ai/1-courses/1-4-langchain-functions-tools-agents/1-openai-function-calling/: main.py
generative-ai/1-courses/1-4-langchain-functions-tools-agents/2-openai-function-calling-with-langchain/: main.py
generative-ai/1-courses/1-4-langchain-functions-tools-agents/3-langchain-expression-language-LCEL/: chain.py
generative-ai/1-courses/1-4-langchain-functions-tools-agents/4-tagging-extraction-using-openai-functions/: main.py
generative-ai/1-courses/1-4-langchain-functions-tools-agents/5-tools-and-routing/: main.py
generative-ai/1-courses/1-4-langchain-functions-tools-agents/6-conversational-agent/: main.py
generative-ai/1-courses/1-7-fine-tuning-llm/: hello.py  pyproject.toml
generative-ai/1-courses/1-7-fine-tuning-llm/1-why-finetune/: comparation.md
generative-ai/1-courses/1-7-fine-tuning-llm/2-where-finetune-fits-in/: main.py
generative-ai/1-courses/1-7-fine-tuning-llm/4-data-preparation/: main.py
generative-ai/1-courses/1-7-fine-tuning-llm/5-training-process/: main.py
generative-ai/2-doc-examples/2-2-langchain/: README.md  pyproject.toml
generative-ai/2-doc-examples/2-2-langchain/2-output-parsers/: retry_when_error_on_parsing.py
generative-ai/2-doc-examples/2-2-langchain/6-agent/: agent.py
generative-ai/2-doc-examples/2-2-langchain/7-memory/: memory.py
generative-ai/3-practice/3-1-sentiment-analyze/: main.py  prompt.txt  pyproject.toml  requirements.md
generative-ai/3-practice/3-4-customer-support-rag-with-eval/: .env.example  README.md  pyproject.toml
generative-ai/3-practice/3-4-customer-support-rag-with-eval/documents/: promptfoo-note.md
generative-ai/3-practice/3-4-customer-support-rag-with-eval/evals/: README.md  pnpm-lock.yaml
generative-ai/3-practice/3-4-customer-support-rag-with-eval/output/: rag_docs_retrieval_evaluation.json
generative-ai/llm/3-practice/3-3-customer-support-rag/: pyproject.toml
generative-ai/multi-agents/3-tutorials/langgraph-quickstart/: README.md  part_1_basic_graph.py  part_2_tools.py  part_2_tools_prebuilt.py  part_3_memory.py  part_4_human_in_the_loop.py  part_5_customize_state.py  part_6_time_travel.py  pyproject.toml
generative-ai/multi-agents/4-how-to-guides/: .env.example  README.md  pyproject.toml
generative-ai/multi-agents/4-how-to-guides/controllability/: how_to_add_runtime_configuration_to_your_graph.ipynb  how_to_combine_control_flow_and_state_updates_with_command.ipynb
generative-ai/multi-agents/4-how-to-guides/fine-grained-control/: how-to-add-node-retries.ipynb  how-to-add-runtime-configuration-to-your-graph.ipynb  how-to-create-map-reduce-branches-for-parallel-execution.ipynb  how-to-return-state-before-hitting-recursion-limit.ipynb  how-to-update-state-and-jump-to-nodes-in-graphs-and-subgraphs.ipynb
generative-ai/multi-agents/4-how-to-guides/graph-api-basics/: how-to-graph-api-basics.md  how_to_create_and_control_loops_with_recursion_limits.ipynb  how_to_create_branches_for_parallel_execution.ipynb  how_to_update_graph_state_from_nodes.ipynb  how_to_visualize_graph.ipynb  pyproject.toml
generative-ai/multi-agents/4-how-to-guides/human-in-the-loop/: how-to-add-dynamic-breakpoins-with-node-interrupt.ipynb  how-to-add-static-breakpoints.ipynb  how-to-edit-graph-state.ipynb  how-to-review-tool-calls.ipynb  how-to-wait-for-user-input.ipynb
generative-ai/multi-agents/4-how-to-guides/memory/: how-to-add-long-term-memory-cross-thread.ipynb  how-to-add-summary-conversation-memory.ipynb  how-to-delete-messages.ipynb  how-to-manage-conversation-history.ipynb  how-to-use-semantic-search-for-long-term-memory.ipynb  how_to.md
generative-ai/multi-agents/4-how-to-guides/multi-agent/: how-to-add-multi-turn-conversation-in-a-multi-agent-application.ipynb  how-to-build-a-multi-agent-network.ipynb  how-to-implement-handoffs-between-agents.ipynb
generative-ai/multi-agents/4-how-to-guides/other/: how-to-force-tool-calling-agent-to-structure-output.ipynb  how-to-integrate-langgraph-with-autoagen-crewai-and-other-frameworks.ipynb  how-to-pass-custom-langsmith-run-id-for-graph-runs.ipynb  how-to-run-graph-asynchronously.ipynb
generative-ai/multi-agents/4-how-to-guides/persistence/: how_to.md  how_to_add_cross_thread_persistence_functional_api.ipynb  how_to_add_cross_thread_persistence_to_your_graph.ipynb  how_to_add_thread_level_persistence_functional_api.ipynb  how_to_add_thread_level_persistence_to_a_subgraph.ipynb  how_to_add_thread_level_persistence_to_your_graph.ipynb  how_to_create_a_custom_checkpointer_using_redis.ipynb  how_to_use_mongodb_checkpointer_for_persistence.ipynb  how_to_use_postgres_checkpointer_for_persistence.ipynb
generative-ai/multi-agents/4-how-to-guides/state-management/: how_to_define_input_output_schema_for_your_graph.ipynb  how_to_pass_private_state_between_nodes.ipynb  how_to_use_pydantic_model_as_graph_state.ipynb  state-management.md
generative-ai/multi-agents/4-how-to-guides/streaming/: how-to-disable-streaming-for-models-that-dont-support-it.ipynb  how-to-stream-data-from-within-a-tool.ipynb  how-to-stream-from-subgraphs.ipynb  how-to-stream-llm-tokens-from-specific-nodes.ipynb  how-to-stream-llm-tokens-from-your-graph.ipynb  how-to-stream.ipynb
generative-ai/multi-agents/4-how-to-guides/subgraphs/: how-to-transform-inputs-and-outputs-of-a-subgraph.ipynb  how-to-use-subgraphs.ipynb  (+1 more)
(+3448 files in other folders)
