[tool.poetry]
name = "architect-diagrams"
version = "0.1.0"
description = ""
authors = ["Thanh Nguyen <thanh.nguyen@asnet.com.vn>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
diagrams = "^0.23.4"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
