[project]
name = "1-7-fine-tuning-llm"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "datasets>=3.2.0",
    "huggingface-hub>=0.27.1",
    "lamini>=3.2.5",
    "python-dotenv>=1.0.1",
    "torch>=2.5.1",
    "transformers[torch]>=4.48.0",
]
