[tool.poetry]
name = "langchain-document-examples"
version = "0.1.0"
description = ""
authors = ["Thanh Nguyen <thanh.nguyen@asnet.com.vn>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
python-dotenv = "^1.0.1"
langchain = "^0.3.7"
langchain-community = "^0.3.5"
langchain-openai = "^0.2.6"
six = "^1.16.0"
langchain-chroma = "^0.1.4"
faiss-cpu = "^1.9.0"
langchain-core = "^0.3.24"
wikipedia = "^1.4.0"
langgraph = "^0.2.59"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
