[project]
name = "4-how-to-guides"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "ipykernel>=6.29.5",
    "langchain-anthropic>=0.3.7",
    "langchain>=0.3.18",
    "langgraph>=0.2.72",
    "langchain-openai>=0.3.5",
    "notebook>=7.3.2",
    "langchain-community>=0.3.17",
]
