[project]
name = "langgraph-quickstart"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "ipykernel>=6.29.5",
    "langchain-anthropic>=0.3.5",
    "langchain-community>=0.3.16",
    "langgraph>=0.2.69",
    "langsmith>=0.3.5",
    "remote-pdb>=2.1.0",
    "tavily-python>=0.5.0",
]

[dependency-groups]
jupyter = [
    "graphviz>=0.20.3",
    "nest-asyncio>=1.6.0",
    "pyppeteer>=2.0.0",
]
