[project]
name = "research-assistant"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "langchain-community>=0.3.19",
    "langchain-core>=0.3.44",
    "langchain-openai>=0.3.8",
    "langgraph>=0.3.8",
    "langsmith>=0.3.13",
    "notebook>=7.3.2",
    "remote-pdb>=2.1.0",
    "tavily-python>=0.5.1",
    "wikipedia>=1.4.0",
]
