[project]
name = "build-retrieval-augmented-generation-app"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "langchain-openai>=0.2.8",
    "langchain>=0.3.7",
    "langchain-chroma>=0.1.4",
    "langchain-community>=0.3.7",
    "python-dotenv>=1.0.1",
    "bs4>=0.0.2",
]
